--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,4 +1,5 @@
 .navbar {
+    font-family: 'Lora', serif;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,7 +9,7 @@
 }
 
 .navbar h1 {
-    font-family: 'Georgia', serif;
+    font-family: 'Great Vibes', cursive;
     color: #b76e79;
     margin: 0;
 }
@@ -35,5 +36,12 @@
 .navbar a.active {
     border-bottom: 2px solid #b76e79;
     padding-bottom: 2px;
+}
+
+.navbar-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
 
